--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="cupid-suggestion-tag"></div>
+  <div id="cupid-product-list"></div>
   <script src="./app.js"></script>
   <script>
-    window.CupidSDK.init({key:'key123456'});
+    window.CupidSDK.init({id:'key123456', token: 'asbsddasdasdas'});
+    window.CupidSDK.renderSuggestionTag();
     window.CupidSDK.renderProductList();
+
   </script>
 </body>
 </html>
