add header-top and change search.js menu

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,39 @@
 </head>
 
 <body>
+  <div class="header-top">
+    <ul>
+      <li class="about-us">
+        <a href="">關於</a>
+      </li>
+      <li class="culture-value">
+        <a href="">客戶</a>
+      </li>
+      <li class="media-news">
+        <a href="">服務</a>
+      </li>
+      <li class="founder">
+        <a href="">肯定</a>
+      </li>
+      <li class="founder">
+        <a href="">招募</a>
+      </li>
+      <li class="founder">
+        <a href="">粉絲</a>
+      </li>
+      <li class="founder">
+        <a href="">智庫</a>
+      </li>
+      <li class="founder">
+        <a href="">活動</a>
+      </li>
+      <li class="founder">
+        <a href="">諮詢</a>
+      </li>
+    </ul>
+  </div>
   <header>
+
     <div class="head">
       <img src="../src/assets/images/awoo.png" class="awoo-headlogo" alt="">
       <sapn class="logo-font">awoo cupid</sapn>
@@ -27,37 +59,7 @@
     </div>
   </header>
   <menu>
-    <div>
-      <ul class="ul-menu">
-        <li class="li-menu">
-          <a href="">關於</a>
-        </li>
-        <li class="li-menu">
-          <a href="">客戶</a>
-        </li>
-        <li class="li-menu">
-          <a href="">服務</a>
-        </li>
-        <li class="li-menu">
-          <a href="">肯定</a>
-        </li>
-        <li class="li-menu">
-          <a href="">招募</a>
-        </li>
-        <li class="li-menu">
-          <a href="">粉絲</a>
-        </li>
-        <li class="li-menu">
-          <a href="">智庫</a>
-        </li>
-        <li class="li-menu">
-          <a href="">活動</a>
-        </li>
-        <li class="li-menu">
-          <a href="">諮詢</a>
-        </li>
-      </ul>
-    </div>
+
   </menu>
   <main>
   </main>
