fix Api connection

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <div id="cupid-product-list"></div>
   <script src="./app.js"></script>
   <script>
-    window.CupidSDK.init({id:'key123456', token: 'asbsddasdasdas'});
+    window.CupidSDK.init({});
     window.CupidSDK.renderSuggestionTag();
     window.CupidSDK.renderProductList();
 
