--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,9 @@
   <div id="cupid-product-list"></div>
   <script src="./app.js"></script>
   <script>
-    window.CupidSDK.init({});
+    window.CupidSDK.init({id : process.env.NUNUNI_ID, token : process.env.NUNUNI_TOKEN});
     window.CupidSDK.renderSuggestionTag();
     window.CupidSDK.renderProductList();
-
   </script>
 </body>
 </html>
