add effect and change js sure-button

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,13 +5,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="css/header.css">
   <title>awoo</title>
 </head>
 
-<body>
+<body onDRAGSTART="window.event.returnValue=false">
   <div class="header-top">
     <ul>
       <li class="about-us">
@@ -23,22 +22,22 @@
       <li class="media-news">
         <a href="">服務</a>
       </li>
-      <li class="founder">
+      <li>
         <a href="">肯定</a>
       </li>
-      <li class="founder">
+      <li>
         <a href="">招募</a>
       </li>
-      <li class="founder">
+      <li>
         <a href="">粉絲</a>
       </li>
-      <li class="founder">
+      <li>
         <a href="">智庫</a>
       </li>
-      <li class="founder">
+      <li>
         <a href="">活動</a>
       </li>
-      <li class="founder">
+      <li>
         <a href="">諮詢</a>
       </li>
     </ul>
@@ -55,11 +54,10 @@
     </div>
     <div class="search">
       <input class="search-input" type="search"></input>
-      <button class="sure-bottom">搜尋</button>
+      <button class="sure-botton">搜尋</button>
     </div>
   </header>
   <menu>
-
   </menu>
   <main>
   </main>
