change img root

--- a/demo/index.html
+++ b/demo/index.html
@@ -45,7 +45,7 @@
   <header>
 
     <div class="head">
-      <img src="../src/assets/images/awoo.png" class="awoo-headlogo" alt="">
+      <img src="../images/awoo.png" class="awoo-headlogo" alt="">
       <sapn class="logo-font">awoo cupid</sapn>
       <span class="icon">
         <a href=""><i class="fas fa-shopping-cart"></i></a>
