second change img root

--- a/demo/index.html
+++ b/demo/index.html
@@ -45,7 +45,7 @@
   <header>
 
     <div class="head">
-      <img src="../images/awoo.png" class="awoo-headlogo" alt="">
+      <img src="../demo/images/awoo.png" class="awoo-headlogo" alt="">
       <sapn class="logo-font">awoo cupid</sapn>
       <span class="icon">
         <a href=""><i class="fas fa-shopping-cart"></i></a>
@@ -102,7 +102,7 @@
         <span>|</span>
         <a href="">Google Analytics</a>
       </div>
-      <img class="awoo-footlogo" src="../src/assets/images/awoo.png" alt="">
+      <img class="awoo-footlogo" src="../demo/images/awoo.png" alt="">
       <span class="awoo-foottext1">SEO 搜尋引擎最佳化服務專線</span>
       <span class="awoo-foottext2">(02)8712-1128</span>
     </div>
