--- a/demo/index.html
+++ b/demo/index.html
@@ -5,51 +5,50 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/header.scss">
   <title>awoo</title>
 </head>
 
 <body onDRAGSTART="window.event.returnValue=false">
-  <div class="header-top">
-    <ul>
-      <li class="about-us">
-        <a href="">關於</a>
-      </li>
-      <li class="culture-value">
-        <a href="">客戶</a>
-      </li>
-      <li class="media-news">
-        <a href="">服務</a>
-      </li>
-      <li>
-        <a href="">肯定</a>
-      </li>
-      <li>
-        <a href="">招募</a>
-      </li>
-      <li>
-        <a href="">粉絲</a>
-      </li>
-      <li>
-        <a href="">智庫</a>
-      </li>
-      <li>
-        <a href="">活動</a>
-      </li>
-      <li>
-        <a href="">諮詢</a>
-      </li>
-    </ul>
-  </div>
   <header>
-
+    <div class="header-top">
+      <ul>
+        <li class="about-us">
+          <a href="">關於</a>
+        </li>
+        <li class="culture-value">
+          <a href="">客戶</a>
+        </li>
+        <li class="media-news">
+          <a href="">服務</a>
+        </li>
+        <li>
+          <a href="">肯定</a>
+        </li>
+        <li>
+          <a href="">招募</a>
+        </li>
+        <li>
+          <a href="">粉絲</a>
+        </li>
+        <li>
+          <a href="">智庫</a>
+        </li>
+        <li>
+          <a href="">活動</a>
+        </li>
+        <li>
+          <a href="">諮詢</a>
+        </li>
+      </ul>
+    </div>
     <div class="head">
       <img src="../demo/images/awoo.png" class="awoo-headlogo" alt="">
       <sapn class="logo-font">awoo cupid</sapn>
       <span class="icon">
-        <a href=""><i class="fas fa-shopping-cart"></i></a>
-        <a href=""><i class="fas fa-user"></i></a>
+        <a href=""><i class="fas fa-shopping-cart" style="color:#ee5d84"></i></a>
+        <a href=""><i class="fas fa-user" style="color:#ee5d84"></i></a>
       </span>
     </div>
     <div class="search">
@@ -57,8 +56,7 @@
       <button class="sure-botton">搜尋</button>
     </div>
   </header>
-  <menu>
-  </menu>
+  
   <main>
   </main>
 
