--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
 <body onDRAGSTART="window.event.returnValue=false">
   <header>
     <div class="header-top">
-      <ul>
+      <ul class="top-menu">
         <li class="about-us">
           <a href="">關於</a>
         </li>
@@ -58,6 +58,7 @@
   </header>
   
   <main>
+      
   </main>
 
   <footer>
@@ -99,14 +100,14 @@
         <a href="">搜尋引擎最佳化</a>
         <span>|</span>
         <a href="">Google Analytics</a>
+        <span class="awoo-foottext1">SEO 搜尋引擎最佳化服務專線</span>
+        <span class="awoo-foottext2">(02)8712-1128</span>
       </div>
-      <img class="awoo-footlogo" src="../demo/images/awoo.png" alt="">
-      <span class="awoo-foottext1">SEO 搜尋引擎最佳化服務專線</span>
-      <span class="awoo-foottext2">(02)8712-1128</span>
+
     </div>
   </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
-
+<script src="../src/app.js"></script>
 </html>
