--- a/demo/index.html
+++ b/demo/index.html
@@ -47,13 +47,13 @@
       <img src="../demo/images/awoo.png" class="awoo-headlogo" alt="">
       <sapn class="logo-font">awoo cupid</sapn>
       <span class="icon">
-        <a href=""><i class="fas fa-shopping-cart" style="color:#ee5d84"></i></a>
-        <a href=""><i class="fas fa-user" style="color:#ee5d84"></i></a>
+        <a href=""><i class="fas fa-shopping-cart"></i></a>
+        <a href=""><i class="fas fa-user"></i></a>
       </span>
     </div>
     <div class="search">
       <input class="search-input" type="search"></input>
-      <button class="sure-botton">搜尋</button>
+      <button class="sure-button">搜尋</button>
     </div>
   </header>
 
