--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/header.scss">
+  <link rel="stylesheet" href="./js/app.css">
   <title>awoo</title>
 </head>
 
@@ -58,6 +59,8 @@
   </header>
 
   <main>
+      <div id="cupid-suggestion-tag"></div>
+      <div id="cupid-product-list"></div>
   </main>
 
   <footer>
@@ -108,6 +111,12 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
-<script src="../src/app.js"></script>
-
+<script type="text/javascript" async  onload="init()" src="./js/app.js"></script>
+<script>
+  function init() {
+    window.CupidSDK.init({id : process.env.NUNUNI_ID, token : process.env.NUNUNI_TOKEN});
+    window.CupidSDK.renderSuggestionTag();
+    window.CupidSDK.renderProductList();
+  }
+</script>
 </html>
