--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,12 @@
   <div id="cupid-product-list"></div>
   <script src="./app.js"></script>
   <script>
-    window.CupidSDK.init({id : process.env.NUNUNI_ID, token : process.env.NUNUNI_TOKEN});
-    window.CupidSDK.setAPIVersion('v1.3');
-    window.CupidSDK.renderSuggestionTag();
-    window.CupidSDK.renderProductList();
+    const cupidSDK = new CupidSDK();
+    cupidSDK.setAPIVersion('v1.3');
+    cupidSDK.renderSuggestionTag();
+    cupidSDK.renderProductList();
   </script>
+<!--  Uncomment the following line for seeing API outputs in console.-->
+<!--  <script src="tests/api.js"></script>-->
 </body>
 </html>
