--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/header.scss">
-  <link rel="stylesheet" href="./js/app.css">
-  <title>awoo</title>
+  <title>awoo Cupid SDK 範例</title>
 </head>
 
 <body onDRAGSTART="window.event.returnValue=false">
