--- a/demo/index.html
+++ b/demo/index.html
@@ -113,7 +113,7 @@
  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
 
  cupid.init(() => {
-  const cupidSDK = new CupidSDK();
+  const cupidSDK = new CupidSDK('id', 'token');
   cupidSDK.setAPIVersion('v1.3');
   /*頁面渲染範例*/
   cupidSDK.renderSuggestionTag();
