fix url bug and fix node js import undefind window error

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
   <div id="cupid-product-list"></div>
   <script src="./app.js"></script>
   <script>
-    const cupidSDK = new CupidSDK();
+    const cupidSDK = new CupidSDK(process.env.NUNUNI_ID, process.env.NUNUNI_TOKEN);
     cupidSDK.setAPIVersion('v1.3');
+    cupidSDK.setLimit(10);
     cupidSDK.renderSuggestionTag();
     cupidSDK.renderProductList();
   </script>
