--- a/demo/index.html
+++ b/demo/index.html
@@ -114,7 +114,13 @@
 
  cupid.init(() => {
   const cupidSDK = new CupidSDK('id', 'token');
+  
+  /*API版本設定*/
   cupidSDK.setAPIVersion('v1.3');
+
+  /*頁面商品顯示數量設定*/
+  cupidSDK.setLimit(12);
+
   /*頁面渲染範例*/
   cupidSDK.renderSuggestionTag();
   cupidSDK.renderProductList();
