--- a/demo/index.html
+++ b/demo/index.html
@@ -57,8 +57,71 @@
   </header>
 
   <main>
-      <div id="cupid-suggestion-tag"></div>
-      <div id="cupid-product-list"></div>
+    <div id="cupid-suggestion-tag"></div>
+    <div id="cupid-product-list"></div>
+    <div class="spec-info">
+      <ul>
+        <li>
+          <div class="title">商品名稱</div>
+          <div class="detail">Awoo~淡斑嫩白皂(85g)</div>
+        </li>
+        <li>
+          <div class="title">品牌名稱</div>
+          <div class="detail">Awoo</div>
+        </li>
+        <li>
+          <div class="title">商品分類</div>
+          <div class="detail">
+            <a class="r-arrow">臉部保養</a>
+            <a class="r-arrow">臉部清潔</a>
+            <a class="r-arrow">洗面乳｜洗顏皂｜潔顏慕斯</a>
+          </div>
+        </li>
+          
+        <li class="tag-browser">
+          <div class="title">瀏覽其他類別</div>
+          <div class="detail click">
+            <div id="cupid-product-tag">                       
+              <a class="tag">皂</a>
+              <a class="tag">Awoo 淡斑嫩白皂</a>
+              <a class="tag">嫩白</a>
+              <a class="tag">Awoo 淡斑嫩白皂</a>
+              <a class="tag">Awoo 淡斑嫩白皂</a>
+              <a class="tag">淡斑嫩白皂</a>
+              <a class="tag">Awoo 淡斑嫩白皂</a>
+              <a class="tag">Awoo 淡斑嫩白皂</a>
+              <a class="tag">Awoo 嫩白皂</a>
+              <a class="tag">嫩白皂</a>
+            </div>
+            <a href="#" onclick="return false;" class="more" style="display: none;">看更多</a><!--此為看更多標籤連結，需放在最後一個-->
+          </div>
+        </li>
+        <li>
+          <div class="title">商品規格</div>
+          <div class="detail">85g</div>
+        </li>
+        <li>
+          <div class="title">產品說明 </div>
+          <div class="detail">使用方式:<br>洗臉時請將嫩白皂加水搓揉起泡或配合潔膚巾搓出泡沫，將豐厚細緻泡泡塗抹於臉上，最後用清水沖洗乾淨即可。</div>
+        </li>
+        <li>
+          <div class="title">保存期限 </div>
+          <div class="detail">2022.04.01</div>
+        </li>
+        <li>
+          <div class="title">進貨來源 </div>
+          <div class="detail">台灣</div>
+        </li>
+        <li>
+          <div class="title">產地 </div>
+          <div class="detail">台灣</div>
+        </li>
+        <li>
+          <div class="title"> 商品備註 </div>
+          <div class="detail">全新商品</div>
+        </li>
+      </ul>
+    </div>
   </main>
 
   <footer>
@@ -110,15 +173,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
 <script>
- window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
-
+ //window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
+ window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"localhost:9080/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
+ 
  cupid.init(() => {
   const cupidSDK = new CupidSDK('id', 'token');
   cupidSDK.setAPIVersion('v1.3');
   /*頁面渲染範例*/
   cupidSDK.renderSuggestionTag();
   cupidSDK.renderProductList();
-
+  cupidSDK.renderProductTags();
   /*資料存取範例*/
   (async() => {
     console.log(await cupidSDK.getContentAll('日本,面膜'));
