--- a/demo/index.html
+++ b/demo/index.html
@@ -54,13 +54,14 @@
       <input class="search-input" type="search"></input>
       <button class="sure-button">搜尋</button>
     </div>
-    <div class="pagNav"><a href="indexProductTag.html">Product tag</a></div>
   </header>
 
   <main>
     <div id="cupid-suggestion-tag"></div>
     <div id="cupid-product-list"></div>
   </main>
+
+  <div class="pagNav"><a href="indexProductTag.html">Product Tag</a></div>
 
   <footer>
     <div class="footer">
@@ -110,17 +111,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
 <script>
-  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"localhost:3000//production/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
+  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
  
   cupid.init(() => {
     const cupidSDK = new CupidSDK('id', 'token');
-    
     /*API版本設定*/
     cupidSDK.setAPIVersion('v1.3');
-
     /*頁面商品顯示數量設定*/
     cupidSDK.setLimit(12);
-
     /*頁面渲染範例*/
     cupidSDK.renderSuggestionTag();
     cupidSDK.renderProductList();
