--- a/demo/indexProductTag.html
+++ b/demo/indexProductTag.html
@@ -57,7 +57,6 @@
   </header>
 
   <main>
-    <span id="data-cupid-product-id" data-cupid-product-id="9Y005894KT"></span>
     <div class="spec-info">
       <ul>
         <li>
@@ -159,15 +158,14 @@
 <script src="js/search.js"></script>
 <script>
   window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
- 
   cupid.init(() => {
     const cupidSDK = new CupidSDK('id', 'token');
     cupidSDK.setAPIVersion('v2.3');
     /*頁面渲染範例*/
-    cupidSDK.renderProductTag();
+    cupidSDK.renderProductTag('9Y005894KT');
     /*資料存取範例*/
     (async() => {
-      console.log(await cupidSDK.getProductTags());
+      console.log(await cupidSDK.getProductTags('9Y005894KT'));
     })();
   });
 </script>
