code review 修正：兩種取product id 的方式

--- a/demo/index.html
+++ b/demo/index.html
@@ -61,7 +61,7 @@
     <div id="cupid-product-list"></div>
   </main>
 
-  <div class="pagNav"><a href="indexProductTag.html">Product Tag</a></div>
+  <div class="page-nav"><a href="indexProductTag.html">Product Tag</a></div>
 
   <footer>
     <div class="footer">
