--- a/demo/index.html
+++ b/demo/index.html
@@ -61,7 +61,10 @@
     <div id="cupid-product-list"></div>
   </main>
 
-  <div class="page-nav"><a href="indexProductTag.html">Product Tag</a></div>
+  <div class="page-nav">
+    <a href="indexProductTag.html">Product Tag</a>
+    <a href="indexClassify.html">Product Category</a>
+  </div>
 
   <footer>
     <div class="footer">
@@ -111,10 +114,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
 <script>
-  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
+  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"127.0.0.1:5500/cupid-sdk-js/production/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
  
   cupid.init(() => {
-    const cupidSDK = new CupidSDK('id', 'token');
+    const cupidSDK = new CupidSDK('6161772378', '91b350b6aa1627e80a7d5f5587760caab504c3b4');
     /*API版本設定*/
     cupidSDK.setAPIVersion('v1.3');
     /*頁面商品顯示數量設定*/
