--- a/demo/indexClassify.html
+++ b/demo/indexClassify.html
@@ -59,19 +59,18 @@
   <main>
     <div id="cupid-suggestion-tag"></div>
     <div id="cupid-classify"></div>
-    <div class="data-cupid-product-id" data-cupid-product-id="12345"></div>
-    <div class="data-cupid-product-id" data-cupid-product-id="333445"></div>
-    <div class="data-cupid-product-id" data-cupid-product-id="0009689"></div>
-    <div class="data-cupid-product-id" data-cupid-product-id="1AA2345oi"></div>
-    <div class="data-cupid-product-id" data-cupid-product-id="zq998Q1"></div>
+    <!-- <div data-cupid-product-id="99912345"></div>
+    <div data-cupid-product-id="zaw1111"></div>
+    <span data-cupid-product-id="0009689"></span>
+    <div data-cupid-product-id="1AA2345oi"></div>
+    <a data-cupid-product-id="zq998Q1"></a> -->
 
     <div id="cupid-product-list"></div>
   </main>
 
-  <div class="pagNav">
+  <div class="page-nav">
     <a href="index.html">Product List and suggestion</a>
     <a href="indexProductTag.html">Product Tag</a>
-
   </div>
 
   <footer>
@@ -124,21 +123,39 @@
 <script>
   // window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
   window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"127.0.0.1:5500/cupid-sdk-js/production/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
+  
   cupid.init(() => {
-    const cupidSDK = new CupidSDK('9715703849', 'cc2d272beac6800503411c361d9aebb080268789');
+    const cupidSDK = new CupidSDK('6161772378', '91b350b6aa1627e80a7d5f5587760caab504c3b4');
     // const cupidSDK = new CupidSDK('id', 'token');
     /*API版本設定*/
     cupidSDK.setAPIVersion('v2.3');
     /*頁面商品顯示數量設定*/
     cupidSDK.setLimit(12);
+
     /*頁面渲染範例*/
     cupidSDK.renderSuggestionTag();
     cupidSDK.renderProductList();
+
+    /* Classify使用方式一：productId直接代入 cupidSDK.renderClassify。
+    此處以 cupid.getContentAll 產生的 productId 做範例 */
+    /* async function showClassify(){
+      const allContent = await cupidSDK.getContentAll('日本,面膜');
+      const { result } = allContent;
+      const productIds = result.products;
+      let productIdArray = [];     
+      productIds.map(item => productIdArray.push(item.productId));
+      cupidSDK.renderClassify(productIdArray);
+    } 
+    showClassify(); */
+
+    /* Classify使用方式二：若沒有置入參數，程式會搜尋頁面上的 data-cupid-product-id 的值，
+    再代入 cupidSDK.renderClassify 中 */
     cupidSDK.renderClassify();
+
     /*資料存取範例*/
     (async() => {
       console.log(await cupidSDK.getContentAll('日本,面膜'));
-      console.log(await cupidSDK.renderClassify());
+      console.log(await cupidSDK.getClassify('PRODUCT-IDS'));
     })();
   });
 </script>
