--- a/demo/indexClassify.html
+++ b/demo/indexClassify.html
@@ -58,14 +58,11 @@
 
   <main>
     <div id="cupid-suggestion-tag"></div>
-    <div id="cupid-classify"></div>
-    <!-- <div data-cupid-product-id="99912345"></div>
-    <div data-cupid-product-id="zaw1111"></div>
-    <span data-cupid-product-id="0009689"></span>
-    <div data-cupid-product-id="1AA2345oi"></div>
-    <a data-cupid-product-id="zq998Q1"></a> -->
-
     <div id="cupid-product-list"></div>
+    <div class="section-padding">
+      <p>您可能想看其他分類：</p>
+      <div id="cupid-classify"></div>
+    </div>
   </main>
 
   <div class="page-nav">
@@ -121,41 +118,63 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 <script src="js/search.js"></script>
 <script>
-  // window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
-  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"127.0.0.1:5500/cupid-sdk-js/production/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};
+  window.cupid={init:function(t){var e,n,o;document.getElementById("cupid-js")||((e=document.createElement("script")).type="text/javascript",e.id="cupid-js",e.async=!0,e.src=("https:"===document.location.protocol?"https://":"http://")+"api.awoo.org/libs/cupid-sdk-latest.min.js",(o=document.getElementsByTagName("script")[0]).parentNode.insertBefore(e,o)),n=window.onload,window.onload=function(){return n&&n(),t()}}};  
   
   cupid.init(() => {
-    const cupidSDK = new CupidSDK('6161772378', '91b350b6aa1627e80a7d5f5587760caab504c3b4');
-    // const cupidSDK = new CupidSDK('id', 'token');
+    const cupidSDK = new CupidSDK('id', 'token');
     /*API版本設定*/
     cupidSDK.setAPIVersion('v2.3');
     /*頁面商品顯示數量設定*/
     cupidSDK.setLimit(12);
 
-    /*頁面渲染範例*/
-    cupidSDK.renderSuggestionTag();
-    cupidSDK.renderProductList();
-
-    /* Classify使用方式一：productId直接代入 cupidSDK.renderClassify。
-    此處以 cupid.getContentAll 產生的 productId 做範例 */
-    /* async function showClassify(){
-      const allContent = await cupidSDK.getContentAll('日本,面膜');
+    async function getContentProductId(item) {
+      const allContent = await cupidSDK.getContentAll(item);
       const { result } = allContent;
       const productIds = result.products;
-      let productIdArray = [];     
-      productIds.map(item => productIdArray.push(item.productId));
-      cupidSDK.renderClassify(productIdArray);
-    } 
-    showClassify(); */
+      let productIdArray = [];
+      productIds.map(i => productIdArray.push(i.productId));
+      return productIdArray;
+    };
+
+    async function showClassify(item){
+      cupidSDK.renderClassify(await getContentProductId(item));
+    }
+
+    async function findProductId() {
+      const productItem = document.querySelectorAll('.product-container a');
+      let idArray = [];
+      productItem.forEach(item => {
+        let search = item.search.split('=');
+        idArray.push(search[1]);
+      });
+      return idArray;
+    }
+
+    async function setDataCupidId(productId){
+      let dataDom = document.querySelectorAll('span.pro-img');
+      dataDom.forEach((item, index) => item.dataset.cupidProductId = productId[index]);
+    };
+
+    /* Classify使用方式一：將商品id代入 cupidSDK.renderClassify。
+    此處以 cupid.getContentAll 產生的 productId 做範例 */
+    /* 頁面渲染範例 1 */
+    /* cupidSDK.renderSuggestionTag();
+    cupidSDK.renderProductList();
+    showClassify('日本,牙膏'); */
 
     /* Classify使用方式二：若沒有置入參數，程式會搜尋頁面上的 data-cupid-product-id 的值，
-    再代入 cupidSDK.renderClassify 中 */
-    cupidSDK.renderClassify();
+    再代入 cupidSDK.renderClassify 中，此處以 cupid.getContentAll 產生的 productId 做範例 */
+    /* 頁面渲染範例 2 */
+    /* (async() => {
+      cupidSDK.renderSuggestionTag();
+      await cupidSDK.renderProductList();
+      await setDataCupidId(await findProductId());
+      await cupidSDK.renderClassify();
+    })(); */
 
     /*資料存取範例*/
     (async() => {
-      console.log(await cupidSDK.getContentAll('日本,面膜'));
-      console.log(await cupidSDK.getClassify('PRODUCT-IDS'));
+      console.log(await cupidSDK.getClassify(['PRODUCT-ID','PRODUCT-ID']));
     })();
   });
 </script>
