--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="data-cupid-product-id" data-cupid-product-id=""></div>
   <div id="cupid-suggestion-tag"></div>
   <div id="cupid-product-list"></div>
   <div id="cupid-product-tag"></div>
+  <div id="cupid-classify"></div>
   <script src="./app.js"></script>
   <script>
     const cupidSDK = new CupidSDK(process.env.NUNUNI_ID, process.env.NUNUNI_TOKEN);
@@ -19,6 +19,7 @@
     cupidSDK.renderSuggestionTag();
     cupidSDK.renderProductList();
     cupidSDK.renderProductTag();
+    cupidSDK.renderClassify();
   </script>
 <!--  Uncomment the following line for seeing API outputs in console.-->
 <!--  <script src="tests/api.js"></script>-->
