remove token code

--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <div id="cupid-suggestion-tag"></div>
-  <div id="cupid-product-list"></div>
-  <div id="cupid-product-tag"></div>
-  <div id="cupid-classify"></div>
-  <script src="./app.js"></script>
-  <script>
-    const cupidSDK = new CupidSDK(process.env.NUNUNI_ID, process.env.NUNUNI_TOKEN);
-    cupidSDK.setAPIVersion('v2.3');
-    cupidSDK.setLimit(10);
-    cupidSDK.renderSuggestionTag();
-    cupidSDK.renderProductList();
-    cupidSDK.renderProductTag();
-    cupidSDK.renderClassify();
-  </script>
-<!--  Uncomment the following line for seeing API outputs in console.-->
-<!--  <script src="tests/api.js"></script>-->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="cupid-suggestion-tag"></div>
+    <div id="cupid-product-list"></div>
+    <div id="cupid-product-tag"></div>
+    <div id="cupid-classify"></div>
+    <script src="./app.js"></script>
+    <script>
+      const cupidSDK = new CupidSDK("9715703849");
+      cupidSDK.setAPIVersion("v2.3");
+      cupidSDK.setLimit(10);
+      cupidSDK.renderSuggestionTag();
+      // cupidSDK.renderProductList();
+      // cupidSDK.renderProductTag();
+      // cupidSDK.renderClassify();
+    </script>
+    <!--  Uncomment the following line for seeing API outputs in console.-->
+    <!--  <script src="tests/api.js"></script>-->
+  </body>
 </html>
