--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div id="cupid-classify"></div>
     <script src="./app.js"></script>
     <script>
-      const cupidSDK = new CupidSDK("9715703849");
+      const cupidSDK = new CupidSDK("");
       cupidSDK.setAPIVersion("v2.3");
       cupidSDK.setLimit(10);
       cupidSDK.renderSuggestionTag();
