--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,13 @@
     <div id="cupid-classify"></div>
     <script src="./app.js"></script>
     <script>
-      const cupidSDK = new CupidSDK("");
+      const cupidSDK = new CupidSDK("id");
       cupidSDK.setAPIVersion("v2.3");
       cupidSDK.setLimit(10);
       cupidSDK.renderSuggestionTag();
-      // cupidSDK.renderProductList();
-      // cupidSDK.renderProductTag();
-      // cupidSDK.renderClassify();
+      cupidSDK.renderProductList();
+      cupidSDK.renderProductTag();
+      cupidSDK.renderClassify();
     </script>
     <!--  Uncomment the following line for seeing API outputs in console.-->
     <!--  <script src="tests/api.js"></script>-->
