remove customer id

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div data-cupid-product-id="PRODUCT_ID"></div>
     <script src="./app.js"></script>
     <script>
-      const cupidSDK = new CupidSDK("9715703849");
+      const cupidSDK = new CupidSDK("id");
       cupidSDK.setAPIVersion("v2.3");
       cupidSDK.setLimit(10);
       // cupidSDK.renderSuggestionTag();
