--- a/demo/indexClassify.html
+++ b/demo/indexClassify.html
@@ -122,8 +122,8 @@
 
   cupid.init(() => {
     const cupidSDK = new CupidSDK('id');
-    /*API版本設定*/
-    cupidSDK.setAPIVersion('v2.3');
+    /*Products API版本設定 default: latest */
+    cupidSDK.setProductsAPIVersion('v2.3');
     /*頁面商品顯示數量設定*/
     cupidSDK.setLimit(12);
 
