--- a/demo/indexProductTag.html
+++ b/demo/indexProductTag.html
@@ -165,7 +165,8 @@
   cupid.init(() => {
     const cupidSDK = new CupidSDK('id');
 
-    cupidSDK.setAPIVersion('v2.3');
+     /*Products API版本設定 default: latest */
+     cupidSDK.setProductsAPIVersion('v2.3');
     /*頁面渲染範例*/
     cupidSDK.renderProductTag('PRODUCT-ID');
     /*資料存取範例*/
