--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,11 @@
     <div data-cupid-product-id="PRODUCT_ID"></div>
     <script src="./app.js"></script>
     <script>
-      const cupidSDK = new CupidSDK("id");
-      cupidSDK.setAPIVersion("v1.3");
+      const cupidSDK = new CupidSDK(process.env.NUNUNI_ID);
+      /*Content API版本設定*/
+      cupidSDK.setContentAPIVersion('v1.3');
+      /*Products API版本設定*/
+      cupidSDK.setProductsAPIVersion('v2.3');
       cupidSDK.setLimit(10);
       cupidSDK.renderSuggestionTag();
       cupidSDK.renderProductList();
