--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
       // cupidSDK.renderSuggestionTag();
       // cupidSDK.renderProductList();
       cupidSDK.getClassifyProductType('床包‧被套>經典素色>雙人');
+      cupidSDK.renderClassifyProductType('四季被/冬被>品牌冬被>');
       // cupidSDK.renderProductTag('PRODUCT_ID');
       // cupidSDK.renderClassify(['PRODUCT_ID']);
     </script>
